# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg  test  test.cast
gendiff/: __init__.py  cli.py  gendiff.py  get_diff.py  parse_data.py  parse_date.py
gendiff/format/: format.py  json.py  plain.py  stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_gendiff.py
