[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Shows the difference between two files."
authors = ["goryay <iam.goryn@gmail.com>"]
license = "0.1.0"
readme = "README.md"
repository = "https://github.com/goryay/python-project-50"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = { version = "^6.0.0", python = ">=3.8.1" }
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"
